[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GLMHMM_Gauss_Bern"
version = "0.1.0"
authors = [
  { name="Yoel Sanchez Araujo", email="yoelsanchez06@gmail.com" },
]
description = "JAX implementation of dual emission Gaussian and Bernoulli GLM-HMM, as well as individual versions."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax>=0.6.1",  
    "jaxlib>=0.6.1",
    "optax>=0.2.3",
    "tqdm",
    "numpy", 
]

[project.urls]
Homepage = "https://github.com/YSanchezAraujo/glmhmm"
Issues = "https://github.com/YSanchezAraujo/glmhmm/issues"
